# RAG-LLM-Finance-Agent

./: .gitignore  QnA.txt  README.md  design report.md  pyproject.toml
src/: rag-pipeline-pinecone.ipynb  rag-pipeline.ipynb
srclocal/: experiments.ipynb
