[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_agent"
version = "0.1.0"
description = "LangChain + LangGraph retrieval-augmented generation project for finance."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# core dependencies for RAG
dependencies = [
    "langchain>=0.0.296",
    "langgraph>=0.0.10",
    "openai>=0.27.0",
    "faiss-cpu>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic>=1.10.5",
    "pandas",
    "numpy"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
